# liboptparse

./: .gitignore  AUTHORS  Doxyfile  INSTALL  README.md  build.sh  check.sh  configure.ac  cover.sh  rebuild.sh
src/: Makefile.am  optargs.cc  options.cc  parser.cc  program_info.cc  utils.cc
src/liboptparse/: liboptparse.hh  optargs.hh  option_arguments.hh  option_arguments_priv.hpp  options.hh  options_parser.hh  options_priv.hpp  parser.hh  plain_arguments.hh  plain_arguments_priv.hpp  program_info.hh  utils.hh
test/: Makefile.am  cover.sh  cpputest_main.cc  optargs_test.cc  option_arguments_test.cc  options_test.cc  parser_test.cc  plain_arguments_test.cc
