lib_LTLIBRARIES = liboptparse.la
nobase_include_HEADERS = liboptparse/liboptparse.hh \
	liboptparse/optargs.hh \
	liboptparse/options.hh \
	liboptparse/option_arguments.hh \
	liboptparse/parser.hh \
	liboptparse/plain_arguments.hh \
	liboptparse/program_info.hh \
	liboptparse/utils.hh

liboptparse_la_CXXFLAGS = -std=c++17

liboptparse_la_SOURCES = \
	liboptparse/liboptparse.hh \
	liboptparse/optargs.hh \
	optargs.cc \
	liboptparse/options.hh \
	liboptparse/options_priv.hpp \
	options.cc \
	liboptparse/option_arguments.hh \
	liboptparse/option_arguments_priv.hpp \
	liboptparse/parser.hh \
	parser.cc \
	liboptparse/plain_arguments.hh \
	liboptparse/plain_arguments_priv.hpp \
	liboptparse/program_info.hh \
	program_info.cc \
	liboptparse/utils.hh \
	utils.cc
