LDADD = -lCppUTest -lCppUTestExt
check_PROGRAMS = liboptparse
liboptparse_CXXFLAGS =  -W -Wall -std=c++17
liboptparse_SOURCES = \
	cpputest_main.cc \
	./optargs_test.cc \
	./options_test.cc \
	./parser_test.cc \
	../src/liboptparse/types.hh \
	../src/liboptparse/optargs.hh \
	../src/liboptparse/options.hh \
	../src/liboptparse/parser.hh \
	../src/liboptparse/program_info.hh \
	../src/liboptparse/utils.hh \
	../src/optargs.cc \
	../src/options.cc \
	../src/parser.cc \
	../src/program_info.cc \
	../src/utils.cc
